Products.GenericSetup Changelog
===============================

1.4.6 (Unreleased)
------------------

- TBD


1.4.5 (2009-06-20)
------------------

- events: Added 'handleProfileImportedEvent' subscriber.  After a full import,
  it updates 'last version for profile'.  (Backported from trunk)

- Added a for_=None parameter to tool.py:listProfileInfo to have the same
  signature as registry.py:listProfileInfo, so profiles can be filtered by
  interfaces.


1.4.4 (2009-05-15)
------------------

- Make sure that 'manage_createSnapshot' returns something to the browser
  when it's done, preventing an apparent hang.
  (http://dev.plone.org/plone/ticket/8452, 
  https://bugs.launchpad.net/zope-cmf/+bug/161730)

- Fixed invalid XML for the "Import' tab so it doesn't break when rendered
  with Chameleon.


1.4.3 (2009-04-22)
------------------

- Recognize acquisition-wrapped components as being of the right underlying
  type when testing for replacement during import.  
  (https://bugs.launchpad.net/zope-cmf/+bug/365202)

- Don't fail when a sub-item cannot be adapted after creation when
  importing a folder.  (https://bugs.launchpad.net/zope-cmf/+bug/300315)

- Avoid even an explicit purge of the rolemap if no XML file is present
  in a given context.  (https://bugs.launchpad.net/zope-cmf/+bug/279294)

- Changed upgrade logic to set the current version after an upgrade to the
  destination version of the last step run, instead of the current profile
  version.


1.4.2.2 (2008-09-22)
--------------------

- Packaging update:  version of 1.4.2.1 said '1.4.2'.


1.4.2.1 (2008-09-22)
--------------------

- Packaging update:  version of 1.4.2 said '1.4.2dev'.


1.4.2 (2008-09-22)
------------------

- Add 'IChunkedImportContext' interface, allowing RAM-efficient chunked
  reads of large files, and implement for 'DirectoryImportContext'.
  (https://bugs.launchpad.net/zope-cmf/+bug/259233)

- Add 'IChunkedExportContext' interface, allowing RAM-efficient chunked